--- a/WebContent/Styles.css
+++ b/WebContent/Styles.css
@@ -34,3 +34,28 @@ th{
 	font-size:16px;
 	border-radius: 2px;
 }
+h1{
+	width:100%;
+	text-align:center;
+	background-color:#253f3f;
+	color:white;
+	padding: 10px;
+}
+h3{
+	text-align:center;
+	line-height: 24px;
+	width:100%;
+}
+#newElectionForm{
+	width:500px;
+	display:block;
+	margin:0 auto;
+	text-align:right;
+}
+#newElectionForm input[type="text"]{
+	margin:10px;
+	border:none;
+	background-color:#f8e8e2;
+	padding:5px;
+	width:300px;
+}
